--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
   <title>Email Template Red Apple 05 B2</title>
   <style type="text/css">
   * {
-   padding: 0px;
-   margin: 0px;
- }
- body {
-   width: 100%;
- }
- html {
-   -webkit-text-size-adjust: none;
-   -webkit-font-smoothing: antialiased;
- }
- td {
-   mso-line-height-rule: exactly;
- }
- v\:* {
-   behavior: url(#default#VML);
-   display: block;
- }
- a {
-   outline: 0;
- }
- img {
-   display: block;
- }
- td {
-   mso-line-height-rule: exactly;
- }
- .outlookFix {
-   text-decoration: underline;
- }
- </style>
+    padding: 0px;
+    margin: 0px;
+  }
+  body {
+    width: 100%;
+  }
+  html {
+    -webkit-text-size-adjust: none;
+    -webkit-font-smoothing: antialiased;
+  }
+  td {
+    mso-line-height-rule: exactly;
+  }
+  v\:* {
+    behavior: url(#default#VML);
+    display: block;
+  }
+  a {
+    outline: 0;
+  }
+  img {
+    display: block;
+  }
+  td {
+    mso-line-height-rule: exactly;
+  }
+  .outlookFix {
+    text-decoration: underline;
+  }
+  </style>
 </head>
 <body style="margin:0 auto; background-color:#ffffff">
   <!-- Main Container -->
@@ -48,52 +48,21 @@
         <tr>
           <td valign="top" align="left"><table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td valign="top" align="left" height="24"></td>
+              <td valign="top" align="left" height="15"></td>
             </tr>
             <tr>
               <td valign="top" align="center" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#303030; font-weight:normal; line-height:19px; -webkit-text-size-adjust:none; text-align:center;">Having trouble reading this email? <a href="#" target="_blank" style="color:#ed1c24; line-height:17px; text-decoration:underline; font-weight:normal;" class="outlookFix"><span style="color:#ed1c24; line-height:17px; text-decoration:underline; font-weight:normal;" class="outlookFix">View it in your browser.</span></a></td>
             </tr>
             <tr>
-              <td valign="top" align="left" height="22"></td>
+              <td valign="top" align="left" height="19"></td>
             </tr>
           </table></td>
         </tr>
         <!-- END View Browser --> 
-        <!-- Social Header -->
-        <tr>
-          <td align="left" valign="top" bgcolor="#390239"><table width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-              <td height="14" width="100%" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; mso-line-height-rule: exactly; line-height:14px;"><!--[if gte mso 15]>&nbsp;<![endif]--></td>
-            </tr>
-            <tr>
-              <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
-                <tr>
-                  <td width="392" align="left" valign="top"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_twitter.jpg" width="31" height="31" alt="Twitter" border="0" style="display:block;"></a></td>
-                  <td width="8" align="left" valign="top"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_facebook.jpg" width="31" height="31" alt="Facebook" border="0" style="display:block;"></a></td>
-                  <td width="8" align="left" valign="top"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_youtube.jpg" width="31" height="31" alt="YouTube" border="0" style="display:block;"></a></td>
-                  <td width="8" align="left" valign="top"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_instagram.jpg" width="31" height="31" alt="Instagram" border="0" style="display:block;"></a></td>
-                  <td width="8" align="left" valign="top"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_googleplus.jpg" width="31" height="31" alt="Google Plus" border="0" style="display:block;"></a></td>
-                  <td width="8" align="left" valign="top"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_pinterest.jpg" width="31" height="31" alt="Pinterest" border="0" style="display:block;"></a></td>
-                  <td width="19" align="left" valign="top"></td>
-                </tr>
-              </table></td>
-            </tr>
-            <tr>
-              <td height="12" width="100%" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; mso-line-height-rule: exactly; line-height:12px;"><!--[if gte mso 15]>&nbsp;<![endif]--></td>
-            </tr>
-          </table></td>
-        </tr>
-        <!-- END Social Header -->
         <tr>
           <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td align="left" valign="top" width="100%" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; mso-line-height-rule: exactly; line-height:18px;"><img src="images/img_bg_header_top.jpg" width="640" height="18" alt="" border="0" style="display:block;"></td>
+              <td align="left" valign="top" width="100%" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; mso-line-height-rule: exactly; line-height:18px;"><img src="images/img_bg_header_top.jpg" width="640" height="22" alt="" border="0" style="display:block;"></td>
             </tr>
             <tr>
               <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -109,9 +78,43 @@
             <tr>
               <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td align="left" valign="top"><img src="images/img_bg_header_left.jpg" width="198" height="210" alt="" border="0" style="display:block;"></td>
-                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:238px;"><img src="images/header_logo_red_apple_fireworks.jpg" width="238" height="210" alt="RED APPLE FIREWORKS" border="0" style="display:block;"></a></td>
-                  <td align="left" valign="top"><img src="images/img_bg_header_right.jpg" width="204" height="210" alt="" border="0" style="display:block;"></td>
+                  <td align="left" valign="top"><img src="images/img_bg_header_left.jpg" width="203" height="165" alt="" border="0" style="display:block;"></td>
+                  <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:221px;"><img src="images/header_logo_red_apple_fireworks.jpg" width="221" height="165" alt="RED APPLE FIREWORKS" border="0" style="display:block;"></a></td>
+                  <td align="left" valign="top"><img src="images/img_bg_header_right.jpg" width="216" height="165" alt="" border="0" style="display:block;"></td>
+                </tr>
+              </table></td>
+            </tr>
+            <tr>
+              <td align="left" valign="top" bgcolor="#4d0a4d"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td align="left" valign="top" width="20" height="45"></td>
+                  <td align="left" valign="top" width="216"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                      <td align="left" valign="top"><img src="images/img_bg_header_line.jpg" width="216" height="5" alt="" border="0" style="display:block;"></td>
+                    </tr>
+                    <tr>
+                      <td align="left" valign="top"><img src="images/icon_usa.jpg" width="216" height="23" alt="Fireworks Made for the USA" border="0" style="display:block;"></td>
+                    </tr>
+                  </table></td>
+                  <td align="left" valign="top" width="156"><a href="#" target="_blank" style="display:block; width:156px;"><img src="images/img_bg_header_bottom.jpg" width="156" height="37" alt="Fireworks Made for the USA" border="0" style="display:block;"></a></td>
+                  <!-- Social Header -->
+                  <td align="left" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                      <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_twitter.jpg" width="31" height="31" alt="Twitter" border="0" style="display:block;"></a></td>
+                      <td width="8" align="left" valign="top"></td>
+                      <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_facebook.jpg" width="31" height="31" alt="Facebook" border="0" style="display:block;"></a></td>
+                      <td width="8" align="left" valign="top"></td>
+                      <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_youtube.jpg" width="31" height="31" alt="YouTube" border="0" style="display:block;"></a></td>
+                      <td width="8" align="left" valign="top"></td>
+                      <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_instagram.jpg" width="31" height="31" alt="Instagram" border="0" style="display:block;"></a></td>
+                      <td width="8" align="left" valign="top"></td>
+                      <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_googleplus.jpg" width="31" height="31" alt="Google Plus" border="0" style="display:block;"></a></td>
+                      <td width="8" align="left" valign="top"></td>
+                      <td align="left" valign="top"><a href="#" target="_blank" style="display:block; width:31px;"><img src="images/header_icon_pinterest.jpg" width="31" height="31" alt="Pinterest" border="0" style="display:block;"></a></td>
+                      <td width="20" align="left" valign="top"></td>
+                    </tr>
+                  </table></td>
+                  <!-- END Social Header -->
                 </tr>
               </table></td>
             </tr>
@@ -248,7 +251,7 @@
                           <td align="right" valign="bottom" style="vertical-align:bottom; padding-bottom:3px;"><table width="112" border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td width="112" height="36" bgcolor="#f36c21" align="right" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#ffffff; font-weight:bold; line-height:100%; -webkit-text-size-adjust:none; vertical-align:middle;"><a href="#" target="_blank" style="color:#ffffff; line-height:36px; text-decoration:none; font-weight:bold; display:block; vertical-align:middle;" class="outlookFix"><span style="color:#ffffff; line-height:36px; text-decoration:none; font-weight:bold;" class="outlookFix">MORE</span></a></td>
-                              <td width="44" height="36" bgcolor="#f36c21" align="left" valign="top"><a href="#" target="_blank" style="display:block; width:42px;"><img src="images/cta_small_arrow.jpg" width="44" height="36" alt="" border="0" style="display:inline-block;"></a></td>
+                              <td width="44" bgcolor="#f36c21" align="left" valign="top"><a href="#" target="_blank" style="display:block; width:42px;"><img src="images/cta_small_arrow.jpg" width="44" height="36" alt="" border="0" style="display:inline-block;"></a></td>
                             </tr>
                           </table></td>
                         </tr>
@@ -487,6 +490,7 @@
                         <tr>
                           <td height="12" width="100%" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; mso-line-height-rule: exactly; line-height:12px;"><!--[if gte mso 15]>&nbsp;<![endif]--></td>
                         </tr>
+
                         <td align="right" valign="bottom" style="vertical-align:bottom;"><table width="112" border="0" cellspacing="0" cellpadding="0">
                           <tr>
                             <td width="112" height="36" bgcolor="#f36c21" align="right" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#ffffff; font-weight:bold; line-height:100%; -webkit-text-size-adjust:none; vertical-align:middle;"><a href="#" target="_blank" style="color:#ffffff; line-height:36px; text-decoration:none; font-weight:bold; display:block; vertical-align:middle;" class="outlookFix"><span style="color:#ffffff; line-height:36px; text-decoration:none; font-weight:bold;" class="outlookFix">MORE</span></a></td>
